Replace npmcdn.com with unpkg.com

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <main id="app"></main>
     </div>
     <p>by <a href="https://github.com/shintouki">Ted</a></p>
-    <script src='https://npmcdn.com/react@15.3.0/dist/react.js'></script>
-    <script src='https://npmcdn.com/react-dom@15.3.0/dist/react-dom.js'></script>
+    <script src='https://unpkg.com/react@15.3.0/dist/react.js'></script>
+    <script src='https://unpkg.com/react-dom@15.3.0/dist/react-dom.js'></script>
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
     <script src="js/index.js"></script>    
   </body>
