--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="outerMain">
       <main id="app"></main>
     </div>
-    <p>by <a href="https://github.com/shintouki">Ted</a></p>
+    <p>by <a href="https://github.com/tshin1">Ted</a></p>
     <script src='https://unpkg.com/react@15.3.0/dist/react.js'></script>
     <script src='https://unpkg.com/react-dom@15.3.0/dist/react-dom.js'></script>
     <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
